fixed scores spacing

--- a/scores.css
+++ b/scores.css
@@ -62,6 +62,7 @@ nav {
     margin-left: auto;
     margin-right: auto;
     padding: 2em;
+    gap: 2em;
    
     border-radius: 30px;
     table{
